--- a/src/SortingVisualizer.css
+++ b/src/SortingVisualizer.css
@@ -21,7 +21,7 @@
     border: 1px solid #00684A;
     border-radius: 10px;
     font-size: 18px;
-    color: rgba(42, 42, 42, 0.732);
+    color: black;
     font-weight: 600;
     padding: 10px 18px;
     margin-top: 0.7rem;
