--- a/src/SortingVisualizer.css
+++ b/src/SortingVisualizer.css
@@ -1,10 +1,22 @@
 .div-container {
+    background-color: rgba(36,36,36,1);
+    padding: 3rem 0.2rem 0rem 0.2rem;
+    width: fit-content;
+    margin: 0 auto;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    display: block;
+    max-width: 100%;
+}
+
+.div-container .value {
+    color: white;
+    width: 100%;
+    font-weight: 500;
+    margin-top: -19px;
+    font-size: 0.75rem;
     display: flex;
     justify-content: center;
-    margin-left: 50%;
-    padding-bottom: 1rem;
-    width: 90%;
-    transform: translateX(-50%);
 }
 
 .btns {
@@ -16,13 +28,14 @@
 }
 
 .btns button {
-    background-color: #00ED64;
+    background-color: #537FE7;
     outline: none;
-    border: 1px solid #00684A;
+    border: 1px solid #181823;
     border-radius: 10px;
+    cursor: pointer;
     font-size: 18px;
-    color: black;
-    font-weight: 600;
+    color: white;
+    font-weight: 500;
     padding: 10px 18px;
     margin-top: 0.7rem;
     margin-left: 0.5rem;
@@ -31,21 +44,22 @@
 }
 
 .btns button:hover {
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .bars {
     display: flex;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     flex-direction: row;
-    justify-content: center;
-    gap: 30%;
+    justify-content: space-around;
 }
 
 .noofbars,
 .barspeed {
     display: flex;
     flex-direction: column;
-    gap: 0.45rem;
+    gap: 0.5rem;
     align-items: center;
 }
 
@@ -59,7 +73,7 @@
 
 .noofbars input,
 .barspeed input {
-    width: 150%;
+    width: 200%;
 }
 
 input[type="range"] {
@@ -67,7 +81,6 @@ input[type="range"] {
     appearance: none;
     background: transparent;
     cursor: pointer;
-    width: 15rem;
     margin-bottom: 1.5rem;
 }
 
@@ -76,8 +89,8 @@ input[type="range"]:focus {
 }
 
 input[type="range"]::-webkit-slider-runnable-track {
-    background-color: #00ED64;
-    border: 1px solid #00684A;
+    background-color: #537FE7;
+    border: 1px solid #181823;
     border-radius: 0.5rem;
     height: 0.5rem;
 }
@@ -85,9 +98,10 @@ input[type="range"]::-webkit-slider-runnable-track {
 input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
-    margin-top: -12px;
-    background-color: #00684A;
-    height: 2rem;
+    border-radius: 23px;
+    margin-top: -9px;
+    background-color: #2CD3E1;
+    height: 1.5rem;
     width: 1rem;
 }
 
@@ -97,16 +111,19 @@ input[type="range"]:focus::-webkit-slider-thumb {
 }
 
 input[type="range"]::-moz-range-track {
-    background-color: #00ED64;
+    background-color: #537FE7;
+    border: 1px solid #181823;
     border-radius: 0.5rem;
+    border-radius: 50%;
     height: 0.5rem;
 }
 
 
 input[type="range"]::-moz-range-thumb {
     border: none;
-    border-radius: 10px;
-    background-color: #00684A;
+    border-radius: 23px;
+    background-color: #ECF8F9;
+    border-radius: 50%;
     height: 2rem;
     width: 1rem;
 }
@@ -117,15 +134,18 @@ input[type="range"]:focus::-moz-range-thumb {
 }
 
 .div-bar {
-    width: 6px;
-    margin: 0 1px;
-    display: inline-block;
+    width: 18px;
+    margin: 0 1.5px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    display: inline-flex;
     background-color: rgba(0, 157, 255, 0.8);
 }
 
 .div-table {
     width: 30%;
     margin: 0 auto;
+    margin-top: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -154,9 +174,16 @@ input[type="range"]:focus::-moz-range-thumb {
     font-size: 20px;
 }
 
-@media screen and (max-width: 1080px) {
-    .div-container {
-        width: 95%;
+@media screen and (max-width: 1080px) and (min-width:721px) {
+    .div-container .value {
+        margin-top: -10px;
+        text-align: center;
+        font-size: 0.5rem;
+    }
+    .div-bar {
+        width: 8px;
+        border-top-left-radius: 2px;
+        border-top-right-radius: 2px;
     }
 
     .bars {
@@ -172,4 +199,27 @@ input[type="range"]:focus::-moz-range-thumb {
         width: 90%;
     }
 
+}
+
+@media screen and (max-width: 720px) {
+    .noofbars input,
+    .barspeed input {
+        width: 90%;
+    }
+
+    .div-container .value {
+        margin-top: -10px;
+        text-align: center;
+        font-size: 0.45rem;
+    }
+    .div-bar {
+        width: 8px;
+        margin: 0 0.5px;
+        border-top-left-radius: 2px;
+        border-top-right-radius: 2px;
+    }
+
+    .div-table {
+        width: 90%;
+    }
 }
