--- a/src/Nav.css
+++ b/src/Nav.css
@@ -10,7 +10,7 @@
 }
 
 .logo {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     font-weight: 600;
 }
 
@@ -37,32 +37,148 @@ li button {
     outline: none;
     border: 1px solid #181823;
     border-radius: 7px;
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: rgb(34, 34, 34);
     cursor: pointer;
-    font-weight: 500;
+    font-weight: 600;
     padding: 8px 10px;
-    margin-top: 0.7rem;
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
-    transition: 0.2s ease-in;
+    transition: 0.3s ease-in;
 }
 
-@media screen and (max-width:720px) {
-    .navbar {
-        margin-left: 10px;
-        margin-right: 10px;
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    background-color: transparent;
+    color: #fff;
+}
+
+.nav-links a {
+    color: #fff;
+}
+
+/* NAVBAR MENU */
+.menu {
+    display: flex;
+    gap: 1em;
+    font-size: 18px;
+}
+
+.menu li a:hover {
+    background-color: #2CD3E1;
+    border-radius: 5px;
+    border: 1px solid #181823;
+    color: #181823;
+    font-weight: 600;
+    padding: 8px 10px;
+    transition: 0.3s ease;
+}
+
+.menu li {
+    padding: 5px 14px;
+}
+
+/* DROPDOWN MENU */
+.services {
+    position: relative;
+}
+
+.dropdown {
+    background-color: rgb(1, 139, 139);
+    padding: 1em 0;
+    position: absolute;
+    /*WITH RESPECT TO PARENT*/
+    display: none;
+    border-radius: 8px;
+    top: 35px;
+}
+
+.dropdown li+li {
+    margin-top: 10px;
+}
+
+.dropdown li {
+    padding: 0.5em 1em;
+    width: 8em;
+    text-align: center;
+}
+
+.dropdown li:hover {
+    background-color: #4c9e9e;
+}
+
+.services:hover .dropdown {
+    display: block;
+}
+
+input[type=checkbox] {
+    display: none;
+}
+
+/* HAMBURGER MENU */
+.hamburger {
+    display: none;
+    font-size: 24px;
+    user-select: none;
+}
+
+/* APPLYING MEDIA QUERIES */
+@media (max-width: 768px) {
+    .menu {
+        display: none;
+        position: absolute;
+        background-color: #537FE7;
+        right: 0;
+        left: 0;
+        color: #181823;
+        text-align: center;
+        padding: 16px 0;
     }
+
     .logo {
         font-size: 1.2rem;
     }
 
-    .links ul {
-        font-size: 1rem;
+    .menu li:hover {
+        display: inline-block;
+        background-color: transparent;
+        transition: 0.3s ease;
+    }
+
+    .menu li+li {
+        margin-top: 12px;
     }
 
     li button {
-        font-size: 0.8rem;
-        padding: 6px 6px;
+        border: none;
+        color: white;
+        font-weight: 500;
+    }
+
+    li button:hover {
+        color: #181823;
+        border: 1px solid #181823;
+        font-weight: 600;
+    }
+
+    input[type=checkbox]:checked~.menu {
+        display: block;
+        margin-top: 1rem;
+        z-index: 10;
+    }
+
+    .hamburger {
+        display: block;
+    }
+
+    .dropdown {
+        left: 50%;
+        top: 30px;
+        transform: translateX(35%);
+    }
+
+    .dropdown li:hover {
+        background-color: transparent;
     }
 }
