--- a/src/SortingVisualizer.css
+++ b/src/SortingVisualizer.css
@@ -35,8 +35,9 @@
     cursor: pointer;
     font-size: 18px;
     color: white;
-    font-weight: 500;
-    padding: 10px 18px;
+    font-weight: 600;
+    width: 15rem;
+    padding: 10px 15px;
     margin-top: 0.7rem;
     margin-left: 0.5rem;
     margin-right: 0.5rem;
