--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,5 +1,8 @@
 .footer {
+    position: relative;
     margin-top: 3rem;
+    bottom: 0;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
