--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   padding-bottom: 3rem;
   min-height: 100vh;
+  min-width: 100%;
+  width: fit-content;
   background: linear-gradient(180deg, rgba(22,22,22,1) 50%, rgba(27,27,27,1) 60%, rgba(36,36,36,1) 70%, rgba(70,70,70,1) 100%);
 }
