--- a/src/Nav.css
+++ b/src/Nav.css
@@ -1,3 +1,8 @@
+.navbar a {
+    text-decoration: none;
+    color: white;
+}
+
 .navbar {
     display: flex;
     flex-direction: row;
@@ -34,7 +39,7 @@ li a {
 }
 
 li button {
-    background-color: #2CD3E1;
+    background-color: #537FE7;
     outline: none;
     border: 1px solid #181823;
     border-radius: 7px;
@@ -67,7 +72,7 @@ li button {
 }
 
 .menu li a:hover {
-    background-color: #2CD3E1;
+    background-color: #537FE7;
     border-radius: 5px;
     border: 1px solid #181823;
     color: #181823;
