--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,7 @@
   min-height: 100vh;
   min-width: 100%;
   width: fit-content;
+  display: grid;
+  grid-template-rows: 1fr auto;
   background: linear-gradient(180deg, rgba(22,22,22,1) 50%, rgba(27,27,27,1) 60%, rgba(36,36,36,1) 70%, rgba(70,70,70,1) 100%);
 }
