--- a/src/Nav.css
+++ b/src/Nav.css
@@ -12,6 +12,8 @@
     padding-top: 2.5rem;
     margin-bottom: 3.5rem;
     color: white;
+    position: relative;
+    top: 0rem;
 }
 
 .logo {
@@ -19,7 +21,7 @@
     font-weight: 600;
 }
 
-.links ul{
+.links ul {
     margin: 0;
     padding: 0;
     font-size: 1.2rem;
